--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist" 
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -29,8 +31,7 @@
     "globals": "^15.15.0",
     "vite": "^6.2.0"
   },
-  "homepage": "https://Swathi-Mishra.github.io/email-writer-sb",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist" 
+  "homepage": "https://Swathi-Mishra.github.io/email-writer-sb"
+  
   
 }
